catkin_ws/logs/firefly_control/build.make.179.log
[  0%] Built target nodelet_generate_messages_nodejs
[  0%] Built target bond_generate_messages_lisp
[  0%] Built target bond_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_py
[  0%] Built target nodelet_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_nodejs
[  0%] Built target bond_generate_messages_nodejs
[  0%] Built target nodelet_generate_messages_eus
[  0%] Built target tf2_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_eus
[  0%] Built target tf2_msgs_generate_messages_cpp
[  0%] Built target nodelet_generate_messages_cpp
[  0%] Built target _catkin_empty_exported_target
[  0%] Built target actionlib_msgs_generate_messages_py
[  0%] Built target tf2_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_nodejs
[  0%] Built target std_msgs_generate_messages_eus
[  0%] Built target actionlib_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target apriltags2_ros_generate_messages_cpp
[  0%] Built target bond_generate_messages_py
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_eus
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target nodelet_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target tf_generate_messages_eus
[  0%] Built target bond_generate_messages_eus
[  0%] Built target sensor_msgs_generate_messages_nodejs
[  0%] Built target apriltags2_ros_generate_messages_eus
[  0%] Built target roscpp_generate_messages_eus
[  0%] Built target apriltags2_ros_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target apriltags2_ros_generate_messages_nodejs
[  0%] Built target tf_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_eus
[  0%] Built target apriltags2_ros_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_nodejs
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target tf_generate_messages_nodejs
[  0%] Built target tf_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target tf_generate_messages_py
[  0%] Built target actionlib_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_eus
[  0%] Built target sensor_msgs_generate_messages_eus
[  0%] Built target actionlib_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_nodejs
Scanning dependencies of target control
[ 50%] Built target fly
[ 75%] Building CXX object CMakeFiles/control.dir/src/control.cpp.o
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:97:5: error: ‘int32’ does not name a type
     int32 id;
     ^
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::callback_tag(const ConstPtr&)’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:22:13: error: ‘id’ was not declared in this scope
             id = msg->detections[0].id;
             ^
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::command_fly()’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:74:17: error: ‘id’ was not declared in this scope
              << id << endl;
                 ^
CMakeFiles/control.dir/build.make:62: recipe for target 'CMakeFiles/control.dir/src/control.cpp.o' failed
make[2]: *** [CMakeFiles/control.dir/src/control.cpp.o] Error 1
CMakeFiles/Makefile2:127: recipe for target 'CMakeFiles/control.dir/all' failed
make[1]: *** [CMakeFiles/control.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
